--- a/README.rdoc
+++ b/README.rdoc
@@ -17,7 +17,7 @@ Gatekeeper is implemented in Sinatra, but it can authenticate any Rack-based app
 surprised how easy it is.
 
 Simply add the following into your Rack stack, by simply placing it directly into your Sinatra app as middleware, or if you're building a Rack app,
-add it to your stack in [+config.ru+]:
+add it to your stack in +config.ru+:
 
  use Gatekeeper::Middleware do |sso|
    sso.sso_url = "http://your_sso_server.net/sso"
@@ -28,7 +28,7 @@ Be sure to include the correct SSO server URL.
 === With Rails
 
 When using Gatekeeper with Rails, you should create a 'metal' Sinatra app to keep it in, then implement it as show above. It's pretty easy, just 
-run [+script/generate metal sso+]. Inside, you should have:
+run +script/generate metal sso+. Inside, you should have:
 
  require(File.dirname(__FILE__) + "/../../config/environment") unless defined?(Rails)
  require 'sinatra/base'
@@ -42,14 +42,14 @@ run [+script/generate metal sso+]. Inside, you should have:
 
 === In your app
 
-Gatekeeper puts the received user details in a hash accessible using [+session[:sso]+]. Things are a little more convenient using the helpers. To do
+Gatekeeper puts the received user details in a hash accessible using +session[:sso]+. Things are a little more convenient using the helpers. To do
 that, simply include [+Gatekeeper::Helpers::Authentication+] in your app. You can then use the following methods:
 
 	[current_user]	Will return [+nil+] or the current user's id, depending on whether or not the user is logged in.
 	[is_admin?]		Is this user a Hot Ink admin? You may have some tasks that only admin users can do.
 	[is_manager_of?(hotink_account_id)]		Will return true if the user is a manager of the account who's id you passed in.
 	
-Your app can use a simple [+require_user+] method as a before filter to ensure that users are logged in, the most basic of which could look like this:
+Your app can use a simple +require_user+ method as a before filter to ensure that users are logged in, the most basic of which could look like this:
 
  def require_user
   unless current_user
